--- a/hostapd.conf
+++ b/hostapd.conf
@@ -8,5 +8,5 @@ wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 country_code=US
 rsn_pairwise=CCMP
-ssid=GoodTime
+ssid=borrowedTime
 wpa_passphrase=epsteindidnotkillhimself
