--- a/hostapd.conf
+++ b/hostapd.conf
@@ -1,12 +1,14 @@
 interface=wlan0
-channel=6
+ssid=borrowedTime
+hw_mode=g
+channel=7
+wmm_enabled=0
 macaddr_acl=0
 auth_algs=1
 ignore_broadcast_ssid=0
 wpa=2
+wpa_passphrase=epsteindidnotkillhimself
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
-country_code=US
 rsn_pairwise=CCMP
-ssid=borrowedTime
-wpa_passphrase=epsteindidnotkillhimself
+country_code=US
